# LearnOpenGL

./: .gitignore  CMakeLists.txt  main.cpp
include/: common.h
include/glad/: glad.h
src/: common.cpp
src/1_getting_started/: 1_1_helloworld.cpp  1_2_hello_triangle.cpp
src/glad/: glad.c
